rokovi/ppj_sep_1_2018/1/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba ';'
    2        | naredba ';'

    3 naredba: DEF_T '(' ID_T ')'
    4        | DEF_T '(' ID_T ',' lista_el ')'
    5        | PRINT_T '(' FORMAT_T ',' ID_T ')'
    6        | NORM_T '(' ID_T ')'
    7        | ID_T EQ_T izraz

    8 lista_el: lista_el ',' element
    9         | element

   10 element: ID_T ':' BROJ_T

   11 izraz: izraz '+' izraz
   12      | izraz '-' izraz
   13      | izraz '*' izraz
   14      | izraz '/' izraz
   15      | BROJ_T '*' izraz
   16      | '-' izraz
   17      | '(' izraz ')'
   18      | ID_T


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3 4 5 6 17
')' (41) 3 4 5 6 17
'*' (42) 13 15
'+' (43) 11
',' (44) 4 5 8
'-' (45) 12 16
'/' (47) 14
':' (58) 10
';' (59) 1 2
error (256)
DEF_T (258) 3 4
PRINT_T (259) 5
NORM_T (260) 6
EQ_T (261) 7
BROJ_T (262) 10 15
FORMAT_T (263) 5
ID_T (264) 3 4 5 6 7 10 18
U_MINUS (265)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
program (21)
    on left: 1 2, on right: 0 1
naredba (22)
    on left: 3 4 5 6 7, on right: 1 2
lista_el (23)
    on left: 8 9, on right: 4 8
element (24)
    on left: 10, on right: 8 9
izraz (25)
    on left: 11 12 13 14 15 16 17 18, on right: 7 11 12 13 14 15 16
    17


State 0

    0 $accept: . program $end

    DEF_T    shift, and go to state 1
    PRINT_T  shift, and go to state 2
    NORM_T   shift, and go to state 3
    ID_T     shift, and go to state 4

    program  go to state 5
    naredba  go to state 6


State 1

    3 naredba: DEF_T . '(' ID_T ')'
    4        | DEF_T . '(' ID_T ',' lista_el ')'

    '('  shift, and go to state 7


State 2

    5 naredba: PRINT_T . '(' FORMAT_T ',' ID_T ')'

    '('  shift, and go to state 8


State 3

    6 naredba: NORM_T . '(' ID_T ')'

    '('  shift, and go to state 9


State 4

    7 naredba: ID_T . EQ_T izraz

    EQ_T  shift, and go to state 10


State 5

    0 $accept: program . $end
    1 program: program . naredba ';'

    $end     shift, and go to state 11
    DEF_T    shift, and go to state 1
    PRINT_T  shift, and go to state 2
    NORM_T   shift, and go to state 3
    ID_T     shift, and go to state 4

    naredba  go to state 12


State 6

    2 program: naredba . ';'

    ';'  shift, and go to state 13


State 7

    3 naredba: DEF_T '(' . ID_T ')'
    4        | DEF_T '(' . ID_T ',' lista_el ')'

    ID_T  shift, and go to state 14


State 8

    5 naredba: PRINT_T '(' . FORMAT_T ',' ID_T ')'

    FORMAT_T  shift, and go to state 15


State 9

    6 naredba: NORM_T '(' . ID_T ')'

    ID_T  shift, and go to state 16


State 10

    7 naredba: ID_T EQ_T . izraz

    BROJ_T  shift, and go to state 17
    ID_T    shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    izraz  go to state 21


State 11

    0 $accept: program $end .

    $default  accept


State 12

    1 program: program naredba . ';'

    ';'  shift, and go to state 22


State 13

    2 program: naredba ';' .

    $default  reduce using rule 2 (program)


State 14

    3 naredba: DEF_T '(' ID_T . ')'
    4        | DEF_T '(' ID_T . ',' lista_el ')'

    ')'  shift, and go to state 23
    ','  shift, and go to state 24


State 15

    5 naredba: PRINT_T '(' FORMAT_T . ',' ID_T ')'

    ','  shift, and go to state 25


State 16

    6 naredba: NORM_T '(' ID_T . ')'

    ')'  shift, and go to state 26


State 17

   15 izraz: BROJ_T . '*' izraz

    '*'  shift, and go to state 27


State 18

   18 izraz: ID_T .

    $default  reduce using rule 18 (izraz)


State 19

   16 izraz: '-' . izraz

    BROJ_T  shift, and go to state 17
    ID_T    shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    izraz  go to state 28


State 20

   17 izraz: '(' . izraz ')'

    BROJ_T  shift, and go to state 17
    ID_T    shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    izraz  go to state 29


State 21

    7 naredba: ID_T EQ_T izraz .
   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33

    $default  reduce using rule 7 (naredba)


State 22

    1 program: program naredba ';' .

    $default  reduce using rule 1 (program)


State 23

    3 naredba: DEF_T '(' ID_T ')' .

    $default  reduce using rule 3 (naredba)


State 24

    4 naredba: DEF_T '(' ID_T ',' . lista_el ')'

    ID_T  shift, and go to state 34

    lista_el  go to state 35
    element   go to state 36


State 25

    5 naredba: PRINT_T '(' FORMAT_T ',' . ID_T ')'

    ID_T  shift, and go to state 37


State 26

    6 naredba: NORM_T '(' ID_T ')' .

    $default  reduce using rule 6 (naredba)


State 27

   15 izraz: BROJ_T '*' . izraz

    BROJ_T  shift, and go to state 17
    ID_T    shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    izraz  go to state 38


State 28

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   16      | '-' izraz .

    $default  reduce using rule 16 (izraz)


State 29

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   17      | '(' izraz . ')'

    '+'  shift, and go to state 30
    '-'  shift, and go to state 31
    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    ')'  shift, and go to state 39


State 30

   11 izraz: izraz '+' . izraz

    BROJ_T  shift, and go to state 17
    ID_T    shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    izraz  go to state 40


State 31

   12 izraz: izraz '-' . izraz

    BROJ_T  shift, and go to state 17
    ID_T    shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    izraz  go to state 41


State 32

   13 izraz: izraz '*' . izraz

    BROJ_T  shift, and go to state 17
    ID_T    shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    izraz  go to state 42


State 33

   14 izraz: izraz '/' . izraz

    BROJ_T  shift, and go to state 17
    ID_T    shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    izraz  go to state 43


State 34

   10 element: ID_T . ':' BROJ_T

    ':'  shift, and go to state 44


State 35

    4 naredba: DEF_T '(' ID_T ',' lista_el . ')'
    8 lista_el: lista_el . ',' element

    ')'  shift, and go to state 45
    ','  shift, and go to state 46


State 36

    9 lista_el: element .

    $default  reduce using rule 9 (lista_el)


State 37

    5 naredba: PRINT_T '(' FORMAT_T ',' ID_T . ')'

    ')'  shift, and go to state 47


State 38

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | BROJ_T '*' izraz .

    $default  reduce using rule 15 (izraz)


State 39

   17 izraz: '(' izraz ')' .

    $default  reduce using rule 17 (izraz)


State 40

   11 izraz: izraz . '+' izraz
   11      | izraz '+' izraz .
   12      | izraz . '-' izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz

    '*'  shift, and go to state 32
    '/'  shift, and go to state 33

    $default  reduce using rule 11 (izraz)


State 41

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   12      | izraz '-' izraz .
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz

    '*'  shift, and go to state 32
    '/'  shift, and go to state 33

    $default  reduce using rule 12 (izraz)


State 42

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   13      | izraz . '*' izraz
   13      | izraz '*' izraz .
   14      | izraz . '/' izraz

    $default  reduce using rule 13 (izraz)


State 43

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   14      | izraz '/' izraz .

    $default  reduce using rule 14 (izraz)


State 44

   10 element: ID_T ':' . BROJ_T

    BROJ_T  shift, and go to state 48


State 45

    4 naredba: DEF_T '(' ID_T ',' lista_el ')' .

    $default  reduce using rule 4 (naredba)


State 46

    8 lista_el: lista_el ',' . element

    ID_T  shift, and go to state 34

    element  go to state 49


State 47

    5 naredba: PRINT_T '(' FORMAT_T ',' ID_T ')' .

    $default  reduce using rule 5 (naredba)


State 48

   10 element: ID_T ':' BROJ_T .

    $default  reduce using rule 10 (element)


State 49

    8 lista_el: lista_el ',' element .

    $default  reduce using rule 8 (lista_el)
